src/test/contracts/negative/deep_pattern_matching/pm_fail9.religo
type myd = One(int) | Two(unit)

let t = (x : myd) =>
  switch(x) {
  | One(a) => 2
  | Two    => a
  }